--- a/inicio/templates/inicio/mostrar_fechita.html
+++ b/inicio/templates/inicio/mostrar_fechita.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostrar Fecha</title>
-</head>
-<body>
-    <p>{{fecha}}</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title_head %}
+<title>Mostrar Fecha</title>
+{% endblock title_head %}
+
+{% block header %}
+<p>{{fecha}}</p>
+{% endblock header %}
