--- a/inicio/templates/inicio/prueba_render.html
+++ b/inicio/templates/inicio/prueba_render.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba Render</title>
-</head>
-<body>
-    <h1>Probando Render de {{nombre}} </h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title_head %}
+<title>Prueba Render</title>
+{% endblock title_head %}
+
+{% block h1_header %}
+<h1>Probando render de {{nombre}}!</h1>
+{% endblock h1_header %}
