Revisamos la parte de admin y hicimos modificaciones al uso de los na…

--- a/inicio/templates/inicio/prueba_template.html
+++ b/inicio/templates/inicio/prueba_template.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'genericos/base.html' %}
 
 {% block title_head %}
 <title>Prueba template</title>
@@ -17,3 +17,4 @@
 <h3><li>valor del listado numero {{forloop.counter}} es: {{anio}}</li></h3>
 {% endfor %} 
 {% endblock contenido %}
+
